<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16px"
    tools:context="gabrielscalici.helloworld.PrimeiraTela">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50px"
        android:text="@string/texto_apresentacao" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:text="@string/nome_email" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_senha" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <RadioButton
        android:id="@+id/mostrarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_senha" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_marginLeft="90px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_acessar" />

        <Button
            android:id="@+id/button2"
            android:layout_marginLeft="60px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_recuperar" />


    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_marginTop="50px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar" />


</LinearLayout>
